--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -2,7 +2,7 @@ name: fetch-json-and-deploy
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 permissions:
@@ -21,7 +21,6 @@ jobs:
           curl -fSL -o docs/waiting-time.json "https://script.google.com/macros/s/AKfycbwhVUC7H64Eu2l6Lbw2Z2NUL_SeKg3UuTNA77oIPTae3wNRvtCdxo-zuejLOlUXXU_d/exec?route=all"
           curl -fSL -o docs/overpass.json "https://overpass.private.coffee/api/interpreter?data=%0A%5Bout%3Ajson%5D%5Btimeout%3A25%5D%3B%0Away%5B%22name%22~%22%5E%E3%82%B3%E3%83%A2%E3%83%B3%E3%82%BA-.*%24%22%5D(34.64204%2C135.37186%2C34.65667%2C135.39431)-%3E.commonsWays%3B%0Away%5B%22name%22~%22%5E(TEAM%20EXPO%20%E3%83%91%E3%83%93%E3%83%AA%E3%82%AA%E3%83%B3%7C%E3%83%95%E3%83%A5%E3%83%BC%E3%83%81%E3%83%A3%E3%83%BC%E3%83%A9%E3%82%A4%E3%83%95%E3%82%A8%E3%82%AF%E3%82%B9%E3%83%9A%E3%83%AA%E3%82%A8%E3%83%B3%E3%82%B9)%24%22%5D(34.64204%2C135.37186%2C34.65667%2C135.39431)-%3E.futureLifeVillageWays%3B%0A%0A.commonsWays%20%20%20map_to_area%20-%3E%20.commonsAreas%3B%0A.futureLifeVillageWays%20map_to_area%20-%3E%20.futureLifeVillageAreas%3B%0A(%0A%20%20nwr%5B%22amenity%22~%22%5E(exhibition_centre%7Ctheatre)%24%22%5D(34.64204%2C135.37186%2C34.65667%2C135.39431)%3B%0A)-%3E.allAmenities%3B%0A%0A(%0A%20%20nwr(area.commonsAreas)%5B%22amenity%22~%22%5E(exhibition_centre%7Ctheatre)%24%22%5D%3B%0A)-%3E.insideCommons%3B%0A%0A(%0A%20%20nwr(area.futureLifeVillageAreas)%5B%22amenity%22~%22%5E(exhibition_centre%7Ctheatre)%24%22%5D%3B%0A)-%3E.insideFutureLifeVillage%3B%0A%0A(%0A%20%20.allAmenities%3B%0A%20%20-%20.insideCommons%3B%0A)-%3E.allMinusInsideCommons%3B%0A%0A(%0A%20%20.allMinusInsideCommons%3B%0A%20%20-%20.insideFutureLifeVillage%3B%0A)-%3E.allMinusInsideCommonsMinusInsideFutureLifeVillage%3B%0A%0A(%0A%20%20.commonsWays%3B%0A%20%20.futureLifeVillageWays%3B%0A%20%20.allMinusInsideCommonsMinusInsideFutureLifeVillage%3B%0A)%3B%0Aout%20center%3B%0A"
 
-
       - name: Commit if either JSON changed
         run: |
           git config --global user.name  "actions-bot"
@@ -37,6 +36,12 @@ jobs:
 
   deploy:
     needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -44,4 +49,6 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: docs
-      - uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
